2017-02-01  Jonathan Wakely  <jwakely@redhat.com>

	PR libstdc++/79254
	* include/bits/basic_string.h [_GLIBCXX_USE_CXX11_ABI]
	(basic_string::operator=(const basic_string&)): If source object is
	small just deallocate, otherwise perform new allocation before
	making any changes.
	* testsuite/21_strings/basic_string/allocator/wchar_t/copy_assign.cc:
	Test exception-safety of copy assignment when allocator propagates.
	* testsuite/21_strings/basic_string/allocator/char/copy_assign.cc:
	Likewise.
	* testsuite/util/testsuite_allocator.h (uneq_allocator::swap): Make
	std::swap visible.

2017-01-22  Gerald Pfeifer  <gerald@pfeifer.com>

	Merge from mainline
	2017-01-01  Gerald Pfeifer  <gerald@pfeifer.com>

	* doc/xml/faq.xml: Update address of C++ ABI link.
	* doc/xml/manual/abi.xml: Ditto.
	
2017-01-16  Ville Voutilainen  <ville.voutilainen@gmail.com>

	Backport from mainline
	2017-01-16  Ville Voutilainen  <ville.voutilainen@gmail.com>

	PR libstdc++/78389
	* include/bits/list.tcc (merge(list&&)): Fix backwards size adjustments.
	(merge(list&&, _StrictWeakOrdering)): Likewise.
	* testsuite/23_containers/list/operations/78389.cc: Add
	better test for the sizes.

2017-01-15  Ville Voutilainen  <ville.voutilainen@gmail.com>

	Backport from mainline
        2017-01-13  Ville Voutilainen  <ville.voutilainen@gmail.com>

	PR libstdc++/78389
	* include/bits/list.tcc (merge(list&&)):
	Adjust list sizes if the comparator throws.
	(merge(list&&, _StrictWeakOrdering)): Likewise.
	* testsuite/23_containers/list/operations/78389.cc: New.

2017-01-09  Jonathan Wakely  <jwakely@redhat.com>

	* testsuite/30_threads/thread/cons/lwg2097.cc: Compile with
	-std=gnu++11.

	* testsuite/25_algorithms/sort/78991.cc: Compile with -std=gnu++14.

2017-01-06  Jonathan Wakely  <jwakely@redhat.com>

	Backport from mainline
	2017-01-03  Jonathan Wakely  <jwakely@redhat.com>

	PR libstdc++/78956
	* include/std/thread (thread(const thread&&)): Add deleted
	constructor.